--- a/actors.html
+++ b/actors.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styyle.css">
 </head>
 <body>
-<Header>
+    <div class="container">
+<Header class="movie-header">
     <h1>Актёры фильма "Пираты Карибского моря: Проклятие Чёрной жемчужины</h1>
 
-<nav>
+<nav class="main-nav">
 <ul>
 <li><a href="#1">Джонни Депп</a> </li>
 <li><a href="#2">Орландо Блум</a> </li>
@@ -28,14 +30,19 @@
 
 <section id="1">
 <h2>Джонни Депп</h2>
+<div class="actor-content">
 <img src="https://yastatic.net/naydex/yandex-search/nXZ1I2581/e50a29v8IY74/AN8CO2dU6Ffg0FQs0w4p033bb1Ve-vewJ_RM819RiGboB7ooWmWF_c0uOAZpzNCuzdWYrdLXFLZi1_-6HVS8bTAc4OhBphvkJxNWTqGv6Ed9e2-VT6v1Bw"
     alt="Джонни Депп" width="300">
+    <div>
 <p>Джон Кристофер (Джонни) Депп II — американский актёр, кинорежиссёр, музыкант, сценарист и продюсер. Наибольшую известность получил благодаря ролям в фильмах Тима Бёртона, а также образу капитана Джека Воробья в серии фильмов «Пираты Карибского моря»</p>
 <h4>Факты</h4>
 <ul>
     <li>Родился: 9 июня 1963 года (62 года), Оуэнсборо, Дейвисс, Кентукки, США</li>
     <li>Рост: 178 см</li>
     </ul>
+        </div>
+    </div>
+    <div class="scroll-decoration"></div>
 </section>
 
 <section id="2">
@@ -128,6 +135,6 @@
 <hr>
 <p>© 2025 Страница создана в учебных и практических целях</p>
 </footer>
-
+    </div>
 </body>
 </html>
